# learn-haskell

./: .gitignore  AI_AGENT.md  README.md  advanced-concurrency.hs  advanced-lens.hs  ai-agent-framework.cabal  arg-parser.hs  binary-tree.hs  bouncing-balls.hs  build-tower.hs  cards-gamge.hs  category-theory-practice.hs  concurrent.hs  credit-card-mask.hs  data-graph.hs  directions-reduction.hs  effect-systems.hs  exception-handling.hs  find-divisors.hs  find-the-smallest.hs  five-fundamental-monads.hs  foldmap-all-things.hs  free-monads-dsl.hs  git-parser.hs  hash-map.hs  hash-set.hs  hlist.hs  io-side-effects.hs  jaden-case.hs  josephus-permutaion.hs  json-parser.hs  last-digit.hs  lazy-infinite-structures.hs  learn-dependent-type.hs  learn-gadt.hs  maximun-subarray-sum.hs  metaprogramming-generics.hs  middle-permutation.hs  monad-rws.hs  n-queens-problem.hs  (+26 more)
ai_agent_framework/: __init__.py
ai_agent_framework/core/: state.py
app/: Main.hs
dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/AIAgent/Agents/: Base.hs  LLM.hs
src/AIAgent/Core/: Executor.hs  Graph.hs  Node.hs  State.hs
src/AIAgent/Examples/: ChatBot.hs  Simple.hs
src/AIAgent/Tools/: Base.hs  CodeAgent.hs  Function.hs
